2021-03-19 James D. Trotter <james@simula.no>

        Released version 0.6.0.

	Upgrade hwloc 2.0.4 -> 2.4.1.

2020-10-25 James D. Trotter <james@simula.no>

        Initial version.

Copyright (C) 2021 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.