@@ -1,6 +1,6 @@
 #!/bin/bash
 # ex3modules - Makefiles for installing software on the eX3 cluster
-# Copyright (C) 2020 James D. Trotter
+# Copyright (C) 2021 James D. Trotter
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -42,6 +42,8 @@ function help()
     printf "\n"
     printf "  %-20s\t%s\n" "--list-packages" "list available packages"
     printf "  %-20s\t%s\n" "--describe-package" "describe packages"
+    printf "\n"
+    printf "  %-20s\t%s\n" "--with-cuda" "build with CUDA support"
     printf "\n"
     printf "  %-20s\t%s\n" "-v, --verbose" "be more verbose"
     printf "  %-20s\t%s\n" "-h, --help" "display this help and exit"
@@ -94,6 +96,7 @@ function parse_program_options()
 	    --pkgdir=*) pkgdir="${1#*=}"; shift 1;;
 	    --modulefilesdir) modulefilesdir="${2}"; shift 2;;
 	    --modulefilesdir=*) modulefilesdir="${1#*=}"; shift 1;;
+	    --with-cuda) with_cuda=1; shift 1;;
 	    -v | --verbose) verbose=1; shift 1;;
 	    --) shift; break;;
 	    *) EXTRA_OPTIONS+=("${1}"); shift 1;;
@@ -149,6 +152,7 @@ function main ()
     [ ! -z "${pkgsrcdir}" ] && make_options+=" pkgsrcdir=${pkgsrcdir}"
     [ ! -z "${pkgdir}" ] && make_options+=" pkgdir=${pkgdir}"
     [ ! -z "${modulefilesdir}" ] && make_options+=" modulefilesdir=${modulefilesdir}"
+    [ ! -z "${with_cuda}" ] && make_options+=" ENABLE_CUDA=1"
     make ${make_options} ${EXTRA_OPTIONS[@]}
 }
 
